--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-79edff6c">
+     id="img-d5b2ad27">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-79edff6c-1">
-  <g transform="translate(114.2,18.99)">
-    <path fill="none" d="M-14.24,9.83 L 14.24 -9.83" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-d5b2ad27-1">
+  <g transform="translate(113.95,66.93)">
+    <path fill="none" d="M-14.11,-3.49 L 14.11 3.49" class="primitive"/>
   </g>
-  <g transform="translate(69.7,31.3)">
-    <path fill="none" d="M20.71,0.22 L -20.71 -0.22" class="primitive"/>
+  <g transform="translate(77.32,78)">
+    <path fill="none" d="M13.86,-12.73 L -13.86 12.73" class="primitive"/>
   </g>
-  <g transform="translate(94.98,50.65)">
-    <path fill="none" d="M0.8,-15.13 L -0.8 15.13" class="primitive"/>
+  <g transform="translate(82.54,39.32)">
+    <path fill="none" d="M10.09,19.13 L -10.09 -19.13" class="primitive"/>
   </g>
-  <g transform="translate(31,41.51)">
-    <path fill="none" d="M-15.08,9.66 L 15.08 -9.66" class="primitive"/>
+  <g transform="translate(46.23,88.57)">
+    <path fill="none" d="M-14.59,-2.79 L 14.59 2.79" class="primitive"/>
   </g>
-  <g transform="translate(15.55,70.72)">
-    <path fill="none" d="M-2.9,-13.02 L 2.9 13.02" class="primitive"/>
+  <g transform="translate(18.57,61.94)">
+    <path fill="none" d="M6.4,18.98 L -6.4 -18.98" class="primitive"/>
   </g>
-  <g transform="translate(78.93,78.31)">
-    <path fill="none" d="M-14.04,10.49 L 14.04 -10.49" class="primitive"/>
+  <g transform="translate(55.81,14.25)">
+    <path fill="none" d="M-14.51,-4.37 L 14.51 4.37" class="primitive"/>
   </g>
-  <g transform="translate(37.98,87.98)">
-    <path fill="none" d="M17.64,2.82 L -17.64 -2.82" class="primitive"/>
+  <g transform="translate(23.09,26.29)">
+    <path fill="none" d="M10.54,-14.46 L -10.54 14.46" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-79edff6c-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-d5b2ad27-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-79edff6c-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-d5b2ad27-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-79edff6c-4">
-  <g transform="translate(95.98,31.58)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-d5b2ad27-4">
+  <g transform="translate(94.58,62.14)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,53.81)" fill="#2E8B57">
+  <g transform="translate(26.26,84.75)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(61.06,91.67)" fill="#2E8B57">
+  <g transform="translate(36.18,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(129.64,8.33)" fill="#00CDCD">
+  <g transform="translate(129.64,70.81)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(47.32,31.05)" fill="#00CDCD">
+  <g transform="translate(62.43,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(94.12,66.96)" fill="#00CDCD">
+  <g transform="translate(71.86,19.09)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(18.71,84.91)" fill="#00CDCD">
+  <g transform="translate(11.79,41.81)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-79edff6c-5">
-  <g transform="translate(95.98,31.58)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-d5b2ad27-5">
+  <g transform="translate(94.58,62.14)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(11.79,53.81)">
+  <g transform="translate(26.26,84.75)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(61.06,91.67)">
+  <g transform="translate(36.18,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(129.64,8.33)">
+  <g transform="translate(129.64,70.81)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(47.32,31.05)">
+  <g transform="translate(62.43,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(94.12,66.96)">
+  <g transform="translate(71.86,19.09)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(18.71,84.91)">
+  <g transform="translate(11.79,41.81)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -284,7 +284,13 @@ f1 = addFactor!(dfg, [:l0; :x1], LinearConditional(Normal(-10.0,5.0)), solvable=
 # Save to dot file
 toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 # Open with xdot
-# run(`xdot /tmp/test.dot`)</code></pre><pre><code class="language-none">[ Info: try doautoinit! of x0
+# run(`xdot /tmp/test.dot`)</code></pre><pre><code class="language-none">┌ Warning: labels is deprecated, use tags instead
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:445
+┌ Warning: labels is deprecated, use tags instead
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:445
+┌ Warning: labels is deprecated, use tags instead
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:445
+[ Info: try doautoinit! of x0
 [ Info: try doautoinit! of x0
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
