build based on 15e57d5

--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-d5b2ad27">
+     id="img-478c5f5e">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-d5b2ad27-1">
-  <g transform="translate(113.95,66.93)">
-    <path fill="none" d="M-14.11,-3.49 L 14.11 3.49" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-478c5f5e-1">
+  <g transform="translate(113.76,60.53)">
+    <path fill="none" d="M-14.24,-1.95 L 14.24 1.95" class="primitive"/>
   </g>
-  <g transform="translate(77.32,78)">
-    <path fill="none" d="M13.86,-12.73 L -13.86 12.73" class="primitive"/>
+  <g transform="translate(81.01,35.44)">
+    <path fill="none" d="M10.93,18.75 L -10.93 -18.75" class="primitive"/>
   </g>
-  <g transform="translate(82.54,39.32)">
-    <path fill="none" d="M10.09,19.13 L -10.09 -19.13" class="primitive"/>
+  <g transform="translate(78.22,75.92)">
+    <path fill="none" d="M12.91,-14.74 L -12.91 14.74" class="primitive"/>
   </g>
-  <g transform="translate(46.23,88.57)">
-    <path fill="none" d="M-14.59,-2.79 L 14.59 2.79" class="primitive"/>
+  <g transform="translate(53.5,12.35)">
+    <path fill="none" d="M-14.34,-2.92 L 14.34 2.92" class="primitive"/>
   </g>
-  <g transform="translate(18.57,61.94)">
-    <path fill="none" d="M6.4,18.98 L -6.4 -18.98" class="primitive"/>
+  <g transform="translate(22.05,28.36)">
+    <path fill="none" d="M9.62,-16.39 L -9.62 16.39" class="primitive"/>
   </g>
-  <g transform="translate(55.81,14.25)">
-    <path fill="none" d="M-14.51,-4.37 L 14.51 4.37" class="primitive"/>
+  <g transform="translate(48.11,90.12)">
+    <path fill="none" d="M-14.66,-1.39 L 14.66 1.39" class="primitive"/>
   </g>
-  <g transform="translate(23.09,26.29)">
-    <path fill="none" d="M10.54,-14.46 L -10.54 14.46" class="primitive"/>
+  <g transform="translate(19.35,65.69)">
+    <path fill="none" d="M7.13,18.71 L -7.13 -18.71" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-d5b2ad27-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-478c5f5e-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-d5b2ad27-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-478c5f5e-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-d5b2ad27-4">
-  <g transform="translate(94.58,62.14)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-478c5f5e-4">
+  <g transform="translate(94.06,57.83)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(26.26,84.75)" fill="#2E8B57">
+  <g transform="translate(33.81,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(36.18,8.33)" fill="#2E8B57">
+  <g transform="translate(27.92,88.2)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(129.64,70.81)" fill="#00CDCD">
+  <g transform="translate(129.64,62.7)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(62.43,91.67)" fill="#00CDCD">
+  <g transform="translate(69.45,15.59)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(71.86,19.09)" fill="#00CDCD">
+  <g transform="translate(64.43,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(11.79,41.81)" fill="#00CDCD">
+  <g transform="translate(11.79,45.84)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-d5b2ad27-5">
-  <g transform="translate(94.58,62.14)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-478c5f5e-5">
+  <g transform="translate(94.06,57.83)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(26.26,84.75)">
+  <g transform="translate(33.81,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(36.18,8.33)">
+  <g transform="translate(27.92,88.2)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(129.64,70.81)">
+  <g transform="translate(129.64,62.7)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(62.43,91.67)">
+  <g transform="translate(69.45,15.59)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(71.86,19.09)">
+  <g transform="translate(64.43,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(11.79,41.81)">
+  <g transform="translate(11.79,45.84)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -294,18 +294,18 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: try doautoinit! of x0
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
-┌ Warning: This function is deprecated, please use updateVariableSolverData!(dfg::AbstractDFG, variablekey::Symbol, vnd::VariableNodeData, solverKey::Symbol=:default, useCopy::Bool=true, fields::Vector{Symbol}=Symbol, verbose::Bool=true)
-└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:391
+┌ Warning: `updateVariableSolverData!(dfg::AbstractDFG, variablekey::Symbol, vnd::VariableNodeData, solverKey::Symbol, useCopy::Bool = true, fields::Vector{Symbol} = Symbol[], verbose::Bool = true)` is deprecated, use `updateVariableSolverData!(dfg, variablekey, vnd, useCopy, fields, verbose)` instead.
+│   caller = doautoinit!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::DFGVariable{IncrementalInference.ContinuousScalar}; singles::Bool, N::Int64, logger::Logging.ConsoleLogger) at FactorGraph.jl:827
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:827
 [ Info: try doautoinit! of x1
 [ Info: try doautoinit! of l0
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
-┌ Warning: This function is deprecated, please use updateVariableSolverData!(dfg::AbstractDFG, variablekey::Symbol, vnd::VariableNodeData, solverKey::Symbol=:default, useCopy::Bool=true, fields::Vector{Symbol}=Symbol, verbose::Bool=true)
-└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:391
+┌ Warning: `updateVariableSolverData!(dfg::AbstractDFG, variablekey::Symbol, vnd::VariableNodeData, solverKey::Symbol, useCopy::Bool = true, fields::Vector{Symbol} = Symbol[], verbose::Bool = true)` is deprecated, use `updateVariableSolverData!(dfg, variablekey, vnd, useCopy, fields, verbose)` instead.
+│   caller = doautoinit!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::DFGVariable{IncrementalInference.ContinuousScalar}; singles::Bool, N::Int64, logger::Logging.ConsoleLogger) at FactorGraph.jl:827
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:827
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
 [ Info: do init of x1
-[ Info: [2x0p,d1,N100],
-┌ Warning: This function is deprecated, please use updateVariableSolverData!(dfg::AbstractDFG, variablekey::Symbol, vnd::VariableNodeData, solverKey::Symbol=:default, useCopy::Bool=true, fields::Vector{Symbol}=Symbol, verbose::Bool=true)
-└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:391</code></pre><footer><hr/><a class="previous" href="../GraphData/"><span class="direction">Previous</span><span class="title">Using Graph Elements</span></a><a class="next" href="../ref_api/"><span class="direction">Next</span><span class="title">Quick API Reference</span></a></footer></article></body></html>
+[ Info: [2x0p,d1,N100],</code></pre><footer><hr/><a class="previous" href="../GraphData/"><span class="direction">Previous</span><span class="title">Using Graph Elements</span></a><a class="next" href="../ref_api/"><span class="direction">Next</span><span class="title">Quick API Reference</span></a></footer></article></body></html>
