--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-478c5f5e">
+     id="img-dcc8240e">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-478c5f5e-1">
-  <g transform="translate(113.76,60.53)">
-    <path fill="none" d="M-14.24,-1.95 L 14.24 1.95" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-dcc8240e-1">
+  <g transform="translate(28.09,83.32)">
+    <path fill="none" d="M14.96,-7.66 L -14.96 7.66" class="primitive"/>
   </g>
-  <g transform="translate(81.01,35.44)">
-    <path fill="none" d="M10.93,18.75 L -10.93 -18.75" class="primitive"/>
+  <g transform="translate(55.78,49.66)">
+    <path fill="none" d="M-6.89,19.87 L 6.89 -19.87" class="primitive"/>
   </g>
-  <g transform="translate(78.22,75.92)">
-    <path fill="none" d="M12.91,-14.74 L -12.91 14.74" class="primitive"/>
+  <g transform="translate(68.31,82.69)">
+    <path fill="none" d="M-16.05,-7.22 L 16.05 7.22" class="primitive"/>
   </g>
-  <g transform="translate(53.5,12.35)">
-    <path fill="none" d="M-14.34,-2.92 L 14.34 2.92" class="primitive"/>
+  <g transform="translate(79.45,19.35)">
+    <path fill="none" d="M15.07,-8.56 L -15.07 8.56" class="primitive"/>
   </g>
-  <g transform="translate(22.05,28.36)">
-    <path fill="none" d="M9.62,-16.39 L -9.62 16.39" class="primitive"/>
+  <g transform="translate(115.59,20.83)">
+    <path fill="none" d="M-12.9,-9.64 L 12.9 9.64" class="primitive"/>
   </g>
-  <g transform="translate(48.11,90.12)">
-    <path fill="none" d="M-14.66,-1.39 L 14.66 1.39" class="primitive"/>
+  <g transform="translate(102.65,82.81)">
+    <path fill="none" d="M15.48,-7.09 L -15.48 7.09" class="primitive"/>
   </g>
-  <g transform="translate(19.35,65.69)">
-    <path fill="none" d="M7.13,18.71 L -7.13 -18.71" class="primitive"/>
+  <g transform="translate(126.44,51.09)">
+    <path fill="none" d="M-3.01,18.58 L 3.01 -18.58" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-478c5f5e-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-dcc8240e-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-478c5f5e-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-dcc8240e-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-478c5f5e-4">
-  <g transform="translate(94.06,57.83)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-dcc8240e-4">
+  <g transform="translate(47.56,73.35)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(33.81,8.33)" fill="#2E8B57">
+  <g transform="translate(98.87,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(27.92,88.2)" fill="#2E8B57">
+  <g transform="translate(122.79,73.58)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(129.64,62.7)" fill="#00CDCD">
+  <g transform="translate(11.79,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(69.45,15.59)" fill="#00CDCD">
+  <g transform="translate(63.07,28.65)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(64.43,91.67)" fill="#00CDCD">
+  <g transform="translate(85.77,90.54)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(11.79,45.84)" fill="#00CDCD">
+  <g transform="translate(129.64,31.33)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-478c5f5e-5">
-  <g transform="translate(94.06,57.83)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-dcc8240e-5">
+  <g transform="translate(47.56,73.35)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(33.81,8.33)">
+  <g transform="translate(98.87,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(27.92,88.2)">
+  <g transform="translate(122.79,73.58)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(129.64,62.7)">
+  <g transform="translate(11.79,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(69.45,15.59)">
+  <g transform="translate(63.07,28.65)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(64.43,91.67)">
+  <g transform="translate(85.77,90.54)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(11.79,45.84)">
+  <g transform="translate(129.64,31.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -294,18 +294,18 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: try doautoinit! of x0
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
-┌ Warning: `updateVariableSolverData!(dfg::AbstractDFG, variablekey::Symbol, vnd::VariableNodeData, solverKey::Symbol, useCopy::Bool = true, fields::Vector{Symbol} = Symbol[], verbose::Bool = true)` is deprecated, use `updateVariableSolverData!(dfg, variablekey, vnd, useCopy, fields, verbose)` instead.
-│   caller = doautoinit!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::DFGVariable{IncrementalInference.ContinuousScalar}; singles::Bool, N::Int64, logger::Logging.ConsoleLogger) at FactorGraph.jl:827
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:827
+┌ Warning: TODO It looks like solverKey as parameter is deprecated, set it in vnd, or keep this function?
+└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:423
 [ Info: try doautoinit! of x1
 [ Info: try doautoinit! of l0
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
-┌ Warning: `updateVariableSolverData!(dfg::AbstractDFG, variablekey::Symbol, vnd::VariableNodeData, solverKey::Symbol, useCopy::Bool = true, fields::Vector{Symbol} = Symbol[], verbose::Bool = true)` is deprecated, use `updateVariableSolverData!(dfg, variablekey, vnd, useCopy, fields, verbose)` instead.
-│   caller = doautoinit!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::DFGVariable{IncrementalInference.ContinuousScalar}; singles::Bool, N::Int64, logger::Logging.ConsoleLogger) at FactorGraph.jl:827
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:827
+┌ Warning: TODO It looks like solverKey as parameter is deprecated, set it in vnd, or keep this function?
+└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:423
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
 [ Info: do init of x1
-[ Info: [2x0p,d1,N100],</code></pre><footer><hr/><a class="previous" href="../GraphData/"><span class="direction">Previous</span><span class="title">Using Graph Elements</span></a><a class="next" href="../ref_api/"><span class="direction">Next</span><span class="title">Quick API Reference</span></a></footer></article></body></html>
+[ Info: [2x0p,d1,N100],
+┌ Warning: TODO It looks like solverKey as parameter is deprecated, set it in vnd, or keep this function?
+└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:423</code></pre><footer><hr/><a class="previous" href="../GraphData/"><span class="direction">Previous</span><span class="title">Using Graph Elements</span></a><a class="next" href="../ref_api/"><span class="direction">Next</span><span class="title">Quick API Reference</span></a></footer></article></body></html>
