build based on c3d9950

--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-e98dd5a2">
+     id="img-a25c19f4">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-e98dd5a2-1">
-  <g transform="translate(96.48,80.18)">
-    <path fill="none" d="M-5.62,-10.38 L 5.62 10.38" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-a25c19f4-1">
+  <g transform="translate(27.59,60.64)">
+    <path fill="none" d="M14.18,-2.22 L -14.18 2.22" class="primitive"/>
   </g>
-  <g transform="translate(56.68,58.4)">
-    <path fill="none" d="M26.92,6.45 L -26.92 -6.45" class="primitive"/>
+  <g transform="translate(59.95,35.33)">
+    <path fill="none" d="M-10.65,18.59 L 10.65 -18.59" class="primitive"/>
   </g>
-  <g transform="translate(110.8,54.12)">
-    <path fill="none" d="M-17.52,9.59 L 17.52 -9.59" class="primitive"/>
+  <g transform="translate(63.5,75.78)">
+    <path fill="none" d="M-13.32,-14.88 L 13.32 14.88" class="primitive"/>
   </g>
-  <g transform="translate(20.78,39.98)">
-    <path fill="none" d="M-6.71,-10.51 L 6.71 10.51" class="primitive"/>
+  <g transform="translate(87.52,12.37)">
+    <path fill="none" d="M14.69,-2.96 L -14.69 2.96" class="primitive"/>
   </g>
-  <g transform="translate(36.42,16.45)">
-    <path fill="none" d="M-19.73,7.56 L 19.73 -7.56" class="primitive"/>
+  <g transform="translate(119.36,27.99)">
+    <path fill="none" d="M-9.62,-16.03 L 9.62 16.03" class="primitive"/>
   </g>
-  <g transform="translate(124.42,32.09)">
-    <path fill="none" d="M-4.71,-10.58 L 4.71 10.58" class="primitive"/>
+  <g transform="translate(93.74,90.19)">
+    <path fill="none" d="M14.37,-1.33 L -14.37 1.33" class="primitive"/>
   </g>
-  <g transform="translate(85.93,12.75)">
-    <path fill="none" d="M26.68,4.16 L -26.68 -4.16" class="primitive"/>
+  <g transform="translate(122.13,65.39)">
+    <path fill="none" d="M-7.09,19.15 L 7.09 -19.15" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-e98dd5a2-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-a25c19f4-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-e98dd5a2-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-a25c19f4-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-e98dd5a2-4">
-  <g transform="translate(88.88,66.12)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-a25c19f4-4">
+  <g transform="translate(47.2,57.57)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,25.88)" fill="#2E8B57">
+  <g transform="translate(107.56,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(118.04,17.75)" fill="#2E8B57">
+  <g transform="translate(113.63,88.35)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(102.69,91.67)" fill="#00CDCD">
+  <g transform="translate(11.79,63.11)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(28.17,51.57)" fill="#00CDCD">
+  <g transform="translate(71.22,15.65)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(129.64,43.8)" fill="#00CDCD">
+  <g transform="translate(77.71,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(57.62,8.33)" fill="#00CDCD">
+  <g transform="translate(129.64,45.1)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-e98dd5a2-5">
-  <g transform="translate(88.88,66.12)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-a25c19f4-5">
+  <g transform="translate(47.2,57.57)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(11.79,25.88)">
+  <g transform="translate(107.56,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(118.04,17.75)">
+  <g transform="translate(113.63,88.35)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(102.69,91.67)">
+  <g transform="translate(11.79,63.11)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(28.17,51.57)">
+  <g transform="translate(71.22,15.65)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,43.8)">
+  <g transform="translate(77.71,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(57.62,8.33)">
+  <g transform="translate(129.64,45.1)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -269,7 +269,9 @@ amount2:1-d})};a.filter.invert.toString=function(){return this()};a.filter.brigh
 addVariable!(dfg, :x2, ContinuousScalar);
 addFactor!(dfg, [:x1; :x2], LinearConditional(Normal(50.0,2.0)));
 # Save to SVG
-draw(SVG(&quot;graph.svg&quot;, 10cm, 10cm), dfgplot(dfg));</code></pre><p><img src="../graph.svg" alt/></p><h3><a class="nav-anchor" id="More-Information-1" href="#More-Information-1">More Information</a></h3><p>More information at <a href="https://github.com/JuliaGraphs/GraphPlot.jl">GraphPlot.jl</a></p><h2><a class="nav-anchor" id="Dot-Files-1" href="#Dot-Files-1">Dot Files</a></h2><p>Dot files are a standard format for visualizing graphs and applications such as xdot are available to view the files. Dot plotting does not require <code>GraphPlot</code> and can be drawn by either:</p><ul><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDot-Tuple{AbstractDFG}"><code>toDot</code></a> on any graph to produce a string of the graph</li><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDotFile"><code>toDotFile</code></a> on any graph to save it directly to a dotfile</li></ul><pre><code class="language-julia">using DistributedFactorGraphs
+draw(SVG(&quot;graph.svg&quot;, 10cm, 10cm), dfgplot(dfg));</code></pre><pre><code class="language-none">┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = addVariable!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::Symbol, ::IncrementalInference.ContinuousScalar; N::Int64, autoinit::Nothing, solvable::Int64, timestamp::TimeZones.ZonedDateTime, dontmargin::Bool, labels::Nothing, tags::Array{Symbol,1}, smalldata::Dict{String,String}, checkduplicates::Bool, initsolvekeys::Array{Symbol,1}) at FactorGraph.jl:415
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:415</code></pre><p><img src="../graph.svg" alt/></p><h3><a class="nav-anchor" id="More-Information-1" href="#More-Information-1">More Information</a></h3><p>More information at <a href="https://github.com/JuliaGraphs/GraphPlot.jl">GraphPlot.jl</a></p><h2><a class="nav-anchor" id="Dot-Files-1" href="#Dot-Files-1">Dot Files</a></h2><p>Dot files are a standard format for visualizing graphs and applications such as xdot are available to view the files. Dot plotting does not require <code>GraphPlot</code> and can be drawn by either:</p><ul><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDot-Tuple{AbstractDFG}"><code>toDot</code></a> on any graph to produce a string of the graph</li><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDotFile"><code>toDotFile</code></a> on any graph to save it directly to a dotfile</li></ul><pre><code class="language-julia">using DistributedFactorGraphs
 # Construct graph using IIF
 using IncrementalInference
 # Create graph
@@ -285,15 +287,45 @@ f1 = addFactor!(dfg, [:l0; :x1], LinearConditional(Normal(-10.0,5.0)), solvable=
 toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 # Open with xdot
 # run(`xdot /tmp/test.dot`)</code></pre><pre><code class="language-none">┌ Warning: labels is deprecated, use tags instead
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:445
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:445
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = addVariable!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::Symbol, ::IncrementalInference.ContinuousScalar; N::Int64, autoinit::Nothing, solvable::Int64, timestamp::TimeZones.ZonedDateTime, dontmargin::Bool, labels::Nothing, tags::Array{Symbol,1}, smalldata::Dict{String,String}, checkduplicates::Bool, initsolvekeys::Array{Symbol,1}) at FactorGraph.jl:415
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:415
 ┌ Warning: labels is deprecated, use tags instead
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:445
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:445
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = addVariable!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::Symbol, ::IncrementalInference.ContinuousScalar; N::Int64, autoinit::Nothing, solvable::Int64, timestamp::TimeZones.ZonedDateTime, dontmargin::Bool, labels::Nothing, tags::Array{Symbol,1}, smalldata::Dict{String,String}, checkduplicates::Bool, initsolvekeys::Array{Symbol,1}) at FactorGraph.jl:415
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:415
 ┌ Warning: labels is deprecated, use tags instead
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/x0IMa/src/FactorGraph.jl:445
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:445
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = addVariable!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::Symbol, ::IncrementalInference.ContinuousScalar; N::Int64, autoinit::Nothing, solvable::Int64, timestamp::TimeZones.ZonedDateTime, dontmargin::Bool, labels::Nothing, tags::Array{Symbol,1}, smalldata::Dict{String,String}, checkduplicates::Bool, initsolvekeys::Array{Symbol,1}) at FactorGraph.jl:415
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:415
 [ Info: try doautoinit! of x0
 [ Info: try doautoinit! of x0
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = getManifolds at FactorGraph.jl:9 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:9
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = productbelief(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::Symbol, ::Array{KernelDensityEstimate.BallTreeDensity,1}, ::Dict{Int64,Array{KernelDensityEstimate.BallTreeDensity,1}}, ::Int64; dbg::Bool, logger::Logging.ConsoleLogger) at SolveTree.jl:234
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/SolveTree.jl:234
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = setValKDE!(::VariableNodeData{IncrementalInference.ContinuousScalar}, ::Array{Float64,2}, ::Bool, ::Float64) at FactorGraph.jl:140
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:140
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = getBelief(::VariableNodeData{IncrementalInference.ContinuousScalar}) at FactorGraph.jl:1310
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:1310
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = getManifolds at FactorGraph.jl:14 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:14
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = getDimension at FGOSUtils.jl:36 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FGOSUtils.jl:36
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = getDimension at FGOSUtils.jl:36 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FGOSUtils.jl:36
 ┌ Warning: TODO It looks like solverKey as parameter is deprecated, set it in vnd, or keep this function?
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:424
 [ Info: try doautoinit! of x1
@@ -301,6 +333,30 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = getManifolds at FactorGraph.jl:9 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:9
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = getVariableDim at InferDimensionUtils.jl:34 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/InferDimensionUtils.jl:34
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = productbelief(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::Symbol, ::Array{KernelDensityEstimate.BallTreeDensity,1}, ::Dict{Int64,Array{KernelDensityEstimate.BallTreeDensity,1}}, ::Int64; dbg::Bool, logger::Logging.ConsoleLogger) at SolveTree.jl:234
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/SolveTree.jl:234
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = setValKDE!(::VariableNodeData{IncrementalInference.ContinuousScalar}, ::Array{Float64,2}, ::Bool, ::Float64) at FactorGraph.jl:140
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:140
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = getBelief(::VariableNodeData{IncrementalInference.ContinuousScalar}) at FactorGraph.jl:1310
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:1310
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field manifolds is deprecated, extend and use `getManifolds` instead
+│   caller = getManifolds at FactorGraph.jl:14 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FactorGraph.jl:14
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = getDimension at FGOSUtils.jl:36 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FGOSUtils.jl:36
+┌ Warning: Softtype IncrementalInference.ContinuousScalar, field dims is deprecated, extend and use `getDims` instead
+│   caller = getDimension at FGOSUtils.jl:36 [inlined]
+└ @ Core ~/.julia/packages/IncrementalInference/TFc0I/src/FGOSUtils.jl:36
 ┌ Warning: TODO It looks like solverKey as parameter is deprecated, set it in vnd, or keep this function?
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:424
 [ Info: try doautoinit! of x1
