build based on c0d632b

--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-0789de96">
+     id="img-6b1393d8">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-0789de96-1">
-  <g transform="translate(114.6,19.01)">
-    <path fill="none" d="M-13.86,9.84 L 13.86 -9.84" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-6b1393d8-1">
+  <g transform="translate(27.96,74.81)">
+    <path fill="none" d="M14.7,-5.49 L -14.7 5.49" class="primitive"/>
   </g>
-  <g transform="translate(96.52,50.69)">
-    <path fill="none" d="M0.24,-15.11 L -0.24 15.11" class="primitive"/>
+  <g transform="translate(66.46,80.54)">
+    <path fill="none" d="M-14.89,-10.3 L 14.89 10.3" class="primitive"/>
   </g>
-  <g transform="translate(69.73,32.07)">
-    <path fill="none" d="M21.52,-0.34 L -21.52 0.34" class="primitive"/>
+  <g transform="translate(57.36,44.09)">
+    <path fill="none" d="M-8.19,19.62 L 8.19 -19.62" class="primitive"/>
   </g>
-  <g transform="translate(81.5,78.31)">
-    <path fill="none" d="M-13.62,10.46 L 13.62 -10.46" class="primitive"/>
+  <g transform="translate(98.9,86.34)">
+    <path fill="none" d="M14.84,-4.83 L -14.84 4.83" class="primitive"/>
   </g>
-  <g transform="translate(40.1,88.75)">
-    <path fill="none" d="M18.53,2.25 L -18.53 -2.25" class="primitive"/>
+  <g transform="translate(124.56,56.99)">
+    <path fill="none" d="M-4.78,19 L 4.78 -19" class="primitive"/>
   </g>
-  <g transform="translate(30.59,42.94)">
-    <path fill="none" d="M-14.73,9.69 L 14.73 -9.69" class="primitive"/>
+  <g transform="translate(82.09,16.54)">
+    <path fill="none" d="M14.64,-6.19 L -14.64 6.19" class="primitive"/>
   </g>
-  <g transform="translate(16.21,72.16)">
-    <path fill="none" d="M-3.41,-12.98 L 3.41 12.98" class="primitive"/>
+  <g transform="translate(116.69,23.71)">
+    <path fill="none" d="M-11.99,-12.15 L 11.99 12.15" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-0789de96-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-6b1393d8-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-0789de96-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-6b1393d8-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-0789de96-4">
-  <g transform="translate(96.82,31.64)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-6b1393d8-4">
+  <g transform="translate(47.59,67.48)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(64.11,91.67)" fill="#2E8B57">
+  <g transform="translate(118.8,79.87)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,55.31)" fill="#2E8B57">
+  <g transform="translate(101.51,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(129.64,8.33)" fill="#00CDCD">
+  <g transform="translate(11.79,80.86)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(96.26,66.99)" fill="#00CDCD">
+  <g transform="translate(82.54,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(46.54,32.44)" fill="#00CDCD">
+  <g transform="translate(66.02,23.34)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(19.93,86.31)" fill="#00CDCD">
+  <g transform="translate(129.64,36.83)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-0789de96-5">
-  <g transform="translate(96.82,31.64)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-6b1393d8-5">
+  <g transform="translate(47.59,67.48)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(64.11,91.67)">
+  <g transform="translate(118.8,79.87)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(11.79,55.31)">
+  <g transform="translate(101.51,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(129.64,8.33)">
+  <g transform="translate(11.79,80.86)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(96.26,66.99)">
+  <g transform="translate(82.54,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(46.54,32.44)">
+  <g transform="translate(66.02,23.34)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(19.93,86.31)">
+  <g transform="translate(129.64,36.83)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -288,18 +288,16 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: try doautoinit! of x0
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
-┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565
+┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:524
 [ Info: try doautoinit! of x1
 [ Info: try doautoinit! of l0
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
-┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565
+┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:524
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
 [ Info: do init of x1
-[ Info: [2x0p,d1,N100],
-┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565
-└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:524</code></pre><footer><hr/><a class="previous" href="../GraphData/"><span class="direction">Previous</span><span class="title">Using Graph Elements</span></a><a class="next" href="../ref_api/"><span class="direction">Next</span><span class="title">Quick API Reference</span></a></footer></article></body></html>
+[ Info: [2x0p,d1,N100],</code></pre><footer><hr/><a class="previous" href="../GraphData/"><span class="direction">Previous</span><span class="title">Using Graph Elements</span></a><a class="next" href="../ref_api/"><span class="direction">Next</span><span class="title">Quick API Reference</span></a></footer></article></body></html>
